Implement action items
1. Support easily-modifiable external JSON document for list of supported I2C devices
2. Support Get GPIOS to query all GPIOs in 1 call.
3. Update UART - only 1 UART exposed
4. Update I2C - 4 I2C slots are exposed
5. Update FAQS/TERMS/PRIVACY/LICENSE to return URLS only
6. Add search/filtering capability for devices

--- a/webapp/src/ionicapp/www/templates/addI2CDevice.html
+++ b/webapp/src/ionicapp/www/templates/addI2CDevice.html
@@ -30,7 +30,7 @@
     <form id="addI2CDevice-form27" class="list" ng-show="data.i2c.manufacturerid==1">
       <label class="item item-select" id="addI2CDevice-select18">
         <span class="input-label"></span>
-        <select ng-model="data.i2c.devicemodelid" ng-options="devicemodel.id as devicemodel.model for devicemodel in devicemodels_dfr"></select>
+        <select ng-model="data.i2c.devicemodelid" ng-options="devicemodel.id as devicemodel.model for devicemodel in devicemodels_spf"></select>
       </label>
     </form>
     <form id="addI2CDevice-form36" class="list" ng-show="data.i2c.manufacturerid==2">
