--- a/webapp/src/ionicapp/www/templates/configureDevice.html
+++ b/webapp/src/ionicapp/www/templates/configureDevice.html
@@ -25,5 +25,11 @@
     <div class="spacer" style="width: 300px; height: 7px;"></div>
     <button id="configureDevice-button18" ng-click="submitI2C()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large button-outline widget_button">I2C</button>
     <button id="configureDevice-button22" ng-click="submitNotifications()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large widget_button">Notification</button>
+    <div class="spacer" style="width: 300px; height: 7px;"></div>
+    <button id="configureDevice-button74" ng-click="submitTODO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-stable button-large widget_button">TProbe</button>
+    <button id="configureDevice-button59" ng-click="submitTODO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-stable button-large widget_button">OneWire</button>
+    <div class="spacer" style="width: 300px; height: 7px;"></div>
+    <button id="configureDevice-button58" ng-click="submitTODO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-stable button-large widget_button">ADC</button>
+    <div class="spacer" style="width: 300px; height: 50px;"></div>
   </ion-content>
 </ion-view>
