Support I2C devices pages

--- a/webapp/src/ionicapp/www/templates/addI2CDevice.html
+++ b/webapp/src/ionicapp/www/templates/addI2CDevice.html
@@ -6,6 +6,12 @@
     <button class="button button-positive icon ion-refresh" ng-click="getI2CDevices()"></button>
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
+    <div class="spacer" style="width: 300px; height: 12px;"></div>
+    <div id="addI2CDevice-markdown74" style="text-align:center;" class="show-list-numbers-and-dots">
+      <p style="color:#387EF5;font-size:18px;">
+        <strong> {{ data.devicename }} </strong>
+      </p>
+    </div>
     <div id="addI2CDevice-markdown35" class="show-list-numbers-and-dots">
       <p style="color:#000000;">Manufacturer</p>
     </div>
