--- a/webapp/src/ionicapp/www/templates/deviceUART.html
+++ b/webapp/src/ionicapp/www/templates/deviceUART.html
@@ -9,6 +9,11 @@
     <form id="deviceUART-form35" class="list">
       <div id="deviceUART-button-bar3" class="button-bar"></div>
       <div class="spacer" style="width: 300px; height: 12px;"></div>
+      <div id="deviceUART-markdown58" style="text-align:center;" class="show-list-numbers-and-dots">
+        <p style="color:#387EF5;font-size:18px;">
+          <strong> {{ data.devicename }} </strong>
+        </p>
+      </div>
       <ion-toggle toggle-class="toggle-positive" id="deviceUART-toggle3" ng-model="data.enableUART" ng-change="changeUART(data.enableUART)">Enable</ion-toggle>
       <label class="item item-select" id="deviceUART-select9">
         <span class="input-label">Baud Rate</span>
