--- a/webapp/src/ionicapp/www/templates/configureDevice.html
+++ b/webapp/src/ionicapp/www/templates/configureDevice.html
@@ -24,12 +24,12 @@
     <button id="configureDevice-button52" ng-click="submitGPIO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large button-outline widget_button">GPIO</button>
     <div class="spacer" style="width: 300px; height: 7px;"></div>
     <button id="configureDevice-button18" ng-click="submitI2C()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large button-outline widget_button">I2C</button>
-    <button id="configureDevice-button22" ng-click="submitNotifications()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large widget_button">Notification</button>
+    <button id="configureDevice-button58" ng-click="submitTODO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large widget_button">ADC</button>
     <div class="spacer" style="width: 300px; height: 7px;"></div>
-    <button id="configureDevice-button74" ng-click="submitTODO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-stable button-large widget_button">TProbe</button>
-    <button id="configureDevice-button59" ng-click="submitTODO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-stable button-large widget_button">OneWire</button>
-    <div class="spacer" style="width: 300px; height: 7px;"></div>
-    <button id="configureDevice-button58" ng-click="submitTODO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-stable button-large widget_button">ADC</button>
-    <div class="spacer" style="width: 300px; height: 50px;"></div>
+    <button id="configureDevice-button59" ng-click="submitTODO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large widget_button">OneWire</button>
+    <button id="configureDevice-button74" ng-click="submitTODO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large widget_button">TProbe</button>
+    <div class="spacer" style="width: 300px; height: 30px;"></div>
+    <button id="configureDevice-button22" ng-click="submitNotifications()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-stable button-large button-outline widget_button">Notification</button>
+    <div class="spacer" style="width: 300px; height: 80px;"></div>
   </ion-content>
 </ion-view>
