--- a/webapp/src/ionicapp/www/templates/deviceNotifications.html
+++ b/webapp/src/ionicapp/www/templates/deviceNotifications.html
@@ -3,16 +3,15 @@
     <button class="button button-icon icon ion-android-close" ng-click="submitDeviceList()"></button>
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
+    <div class="spacer" style="width: 300px; height: 12px;"></div>
     <div id="deviceNotifications-markdown24" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#444444;font-size:18px;">
+      <p style="color:#387EF5;font-size:18px;">
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
     <form id="deviceNotifications-form14" class="list">
       <div id="deviceNotifications-markdown27" style="text-align:center;" class="show-list-numbers-and-dots">
-        <p style="color:#444444;font-size:15px;">Status:
-          <strong>{{ data.devicestatus }}</strong>
-        </p>
+        <p style="color:#444444;font-size:12px;">{{ data.devicestatus }}</p>
       </div>
       <div id="deviceNotifications-button-bar1" class="button-bar">
         <button id="deviceNotifications-button48" ng-class="{'active': data.activeSection==1}" ng-click="changeSection(1)" class="button button-positive button-small button-block">Email</button>
